# warsaw_flats_dashboard

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/: app.py  dash_org_from_blog.py  dashboard.py
