[requires]
python_version = "3.9"

[tool.poetry]
name = "Warsaw Flats Dashboard"
version = "0.1.0"
description = ""
authors = ["MAB"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
poetry="*"
dash = "*"
dash_table = "*"
dash_core_components = "*"
dash_html_components = "*"
pandas = "*"
plotly = "*"
gunicorn = "*"
numpy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
